<resources>
    <string name="app_name">ExamenAndroidFundamentals</string>
    <string name="espa_a">España</string>
    <string name="francia">Francia</string>
    <string name="inglaterra">Inglaterra</string>
    <string name="ir">Ir</string>
    <string name="descCountry">El idioma que se habla es Español</string>
    <string name="descCountryEng">El idioma que se habla es Ingles</string>
    <string name="descCountryFr">El idioma que se habla es Frances</string>
    <string name="atras">Regresar</string>
</resources>